styles/style.css
html * {
    font-family: 'Work Sans', sans-serif;
}

body {
    padding-top: 4.5rem;
    padding-bottom: 120px;
/*    background: rgb(57, 57, 167);
    background: radial-gradient(circle, rgba(57, 57, 167, 1) 9%, rgba(62, 126, 236, 1) 89%);*/
}

canvas {
    position:fixed;
    padding:0;
    margin:0;

    top:0;
    left:0;

    width: 100%;
    height: 100%;

    z-index: -100;
}

a.anchor {
    display: block;
    position: relative;
    top: -80px;
    visibility: hidden;
}

.header {
    font-weight: bold;
    font-family: 'JetBrains Mono', monospace;
    text-shadow: 2px 2px 10px #222222;
}

hr {
    border: none;
    opacity: 100%;
    background-color: white;
    width: 50%;
    margin: 20px auto;
    animation: hr-load-anim .5s;
}

@keyframes hr-load-anim {
    from {
        width: 0;
    }
    to {
        width: 50%;
    }
}

@media (max-width: 700px) {
    hr {
        width: 100%;
    }

    @keyframes hr-load-anim {
        from {
            width: 0;
        }
        to {
            width: 100%;
        }
    }
}

#subtitle {
    text-shadow: 2px 2px 10px #222222;
    animation: subtitle-load-anim .5s;
}


@keyframes subtitle-load-anim {
    from {
        margin-top: -20px;
    }
    to {
        margin-top: 0;
    }
}

.about-text {
    font-size: 20px;
    text-align: justify
}

@media (min-width: 576px) {
    .about-text {
        font-size: 22px;
    }
}

@media (min-width: 768px) {
    .about-text {
        font-size: 25px;
    }
}

.section-div {
    background: whitesmoke;
    margin: 10px 40px;
    border-radius: 8px;
}

.btn-social {
    display: inline-block;
    text-align: center;
    transition: transform .2s;
}

.btn-social:hover {
    box-shadow: 0 0 5px #444444;
    transform: scale(1.1);
}

.nav-button {
    transition: transform .2s;
}

.nav-button:hover {
    transform: scale(1.1);
}

.animateOnLoad {
    animation: fadeIn 1s;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 100%;
    }
}

@keyframes slideUp {
    from {
        margin-top: 30px;
    }
    to {
        margin-top: 10px;
    }
}

